# dc-formulae

./: LICENSE  README.md  dc-formulae.cabal
src/: DCFormula.hs
src/DCFormula/: Prelude.hs
