name:                dc-formulae
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nuttycom/dc-formulae#readme
license:             BSD3
license-file:        LICENSE
author:              Kris Nuttycombe
maintainer:          kris.nuttycombe@gmail.com
copyright:           1998-2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     DCFormula
  other-modules:       DCFormula.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , parsers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite dc-formulae-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dc-formulae
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/nuttycom/dc-formulae
